Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1199,7 +1199,7 @@
   "pli-tv-kd14:14.29.3": "but ",
   "pli-tv-kd14:14.29.4": "by resolution face-to-face and by further penalty? ",
   "pli-tv-kd14:14.29.5": "It can. ",
-  "pli-tv-kd14:14.29.6": "How is that? ",
+  "pli-tv-kd14:14.29.6": "How’s that? ",
   "pli-tv-kd14:14.29.7": "It may be that a monk accuses a monk of an offense in the midst of the Sangha: ",
   "pli-tv-kd14:14.29.8": "‘Venerable, do you remember committing such-and-such a heavy offense entailing expulsion or bordering on expulsion?’ ",
   "pli-tv-kd14:14.29.9": "He replies, ",
