--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1238,7 +1238,7 @@
   "pli-tv-kd14:14.29.43": "The Sangha has done a legal procedure of further penalty against monk so-and-so. ",
   "pli-tv-kd14:14.29.44": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd14:14.29.45": "This is called the resolution of a legal issue. ",
-  "pli-tv-kd14:14.29.47": "It has been resolved face-to-face and by further penalty. ",
+  "pli-tv-kd14:14.29.47": "It’s been resolved face-to-face and by further penalty. ",
   "pli-tv-kd14:14.29.48": "Face-to-face with what? ",
   "pli-tv-kd14:14.29.49": "Face-to-face with the Sangha, face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. This is the meaning of face-to-face with the Sangha: the monks who should be present have arrived, consent has been brought for those who are eligible to give their consent, and no one present objects to the decision. This is the meaning of face-to-face with the Teaching, face-to-face with the Monastic Law: the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. This is the meaning of face-to-face with the persons concerned: both those who are accusing and those who have been accused are present. ",
   "pli-tv-kd14:14.29.50": "This is the meaning of further penalty: ",
