--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1252,7 +1252,7 @@
   "pli-tv-kd14:14.30.5": "not by covering over as if with grass, ",
   "pli-tv-kd14:14.30.6": "but by resolution face-to-face and by acting according to what has been admitted? ",
   "pli-tv-kd14:14.30.7": "It can. ",
-  "pli-tv-kd14:14.30.8": "How is that? ",
+  "pli-tv-kd14:14.30.8": "How’s that? ",
   "pli-tv-kd14:14.30.9": "It may be that a monk has committed a light offense. ",
   "pli-tv-kd14:14.30.10": "That monk should approach a single monk, put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say: ",
   "pli-tv-kd14:14.30.11": "‘I’ve committed such-and-such an offense. ",
