Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1262,9 +1262,9 @@
   "pli-tv-kd14:14.30.15": "‘Yes, I recognize it.’ —",
   "pli-tv-kd14:14.30.16": "‘You should restrain yourself in the future.’ ",
   "pli-tv-kd14:14.30.17": "This is called the resolution of a legal issue. ",
-  "pli-tv-kd14:14.30.19": "It has been resolved face-to-face and by acting according to what has been admitted. ",
+  "pli-tv-kd14:14.30.19": "It’s been resolved face-to-face and by acting according to what has been admitted. ",
   "pli-tv-kd14:14.30.20": "Face-to-face with what? ",
-  "pli-tv-kd14:14.30.21": "Face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. This is the meaning of face-to-face with the Teaching, face-to-face with the Monastic Law: the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
+  "pli-tv-kd14:14.30.21": "Face-to-face with the Teaching, the Monastic Law, and the persons concerned. This is the meaning of face-to-face with the Teaching and the Monastic Law: the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
   "pli-tv-kd14:14.30.22": "This is the meaning of face-to-face with the persons concerned: ",
   "pli-tv-kd14:14.30.23": "both the one who confesses and the one he confesses to are present. ",
   "pli-tv-kd14:14.30.25": "This is the meaning of acting according to what has been admitted: ",
