--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1283,7 +1283,7 @@
   "pli-tv-kd14:14.31.11": "‘Yes, I recognize it.’ —",
   "pli-tv-kd14:14.31.12": "‘You should restrain yourself in the future.’ ",
   "pli-tv-kd14:14.31.13": "This is called the resolution of a legal issue. ",
-  "pli-tv-kd14:14.31.15": "It has been resolved face-to-face and by acting according to what has been admitted. ",
+  "pli-tv-kd14:14.31.15": "It’s been resolved face-to-face and by acting according to what has been admitted. ",
   "pli-tv-kd14:14.31.16": "Face-to-face with what? ",
   "pli-tv-kd14:14.31.17": "Face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. This is the meaning of face-to-face with the Teaching, face-to-face with the Monastic Law: the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
   "pli-tv-kd14:14.31.18": "This is the meaning of face-to-face with the persons concerned: ",
