--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1285,7 +1285,7 @@
   "pli-tv-kd14:14.31.13": "This is called the resolution of a legal issue. ",
   "pli-tv-kd14:14.31.15": "It’s been resolved face-to-face and by acting according to what has been admitted. ",
   "pli-tv-kd14:14.31.16": "Face-to-face with what? ",
-  "pli-tv-kd14:14.31.17": "Face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. This is the meaning of face-to-face with the Teaching, face-to-face with the Monastic Law: the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
+  "pli-tv-kd14:14.31.17": "Face-to-face with the Teaching, the Monastic Law, and the persons concerned. This is the meaning of face-to-face with the Teaching and the Monastic Law: the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
   "pli-tv-kd14:14.31.18": "This is the meaning of face-to-face with the persons concerned: ",
   "pli-tv-kd14:14.31.19": "both the one who confesses and the one he confesses to are present. ",
   "pli-tv-kd14:14.31.21": "This is the meaning of acting according to what has been admitted: ",
