Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1304,7 +1304,7 @@
   "pli-tv-kd14:14.32.11": "‘Yes, I recognize it.’ —",
   "pli-tv-kd14:14.32.12": "‘You should restrain yourself in the future.’ ",
   "pli-tv-kd14:14.32.13": "This is called the resolution of a legal issue. ",
-  "pli-tv-kd14:14.32.15": "It has been resolved face-to-face and by acting according to what has been admitted. ",
+  "pli-tv-kd14:14.32.15": "It’s been resolved face-to-face and by acting according to what has been admitted. ",
   "pli-tv-kd14:14.32.16": "Face-to-face with what? ",
   "pli-tv-kd14:14.32.17": "Face-to-face with the Sangha, face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. This is the meaning of face-to-face with the Sangha: the monks who should be present have arrived, consent has been brought for those who are eligible to give their consent, and no one present objects to the decision. This is the meaning of face-to-face with the Teaching, face-to-face with the Monastic Law: the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. This is the meaning of face-to-face with the persons concerned: both the one who confesses and the one he confesses to are present. This is the meaning of acting according to what has been admitted: the doing of, the performing of, the participation in, the consent to, the agreement to, the non-objection to that legal procedure of acting according to what has been admitted. ",
   "pli-tv-kd14:14.32.18": "When a legal issue has been resolved like this, if the receiver of the confession reopens it, he incurs an offense entailing confession for the reopening. ",
