Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1314,7 +1314,7 @@
   "pli-tv-kd14:14.33.2": "not by acting according to what has been admitted, ",
   "pli-tv-kd14:14.33.3": "but by resolution face-to-face and by covering over as if with grass? ",
   "pli-tv-kd14:14.33.4": "It can. ",
-  "pli-tv-kd14:14.33.5": "How is that? ",
+  "pli-tv-kd14:14.33.5": "How’s that? ",
   "pli-tv-kd14:14.33.6": "It may be that monks who are arguing and disputing do and say many things unworthy of monastics. ",
   "pli-tv-kd14:14.33.7": "If they consider this and think, ",
   "pli-tv-kd14:14.33.9": "‘If we deal with one another for these offenses, this legal issue might lead to harshness, nastiness, and schism,’ ",
