Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1355,12 +1355,12 @@
   "pli-tv-kd14:14.33.41.4": "We have confessed our offenses in the midst of the Sangha by covering over as if with grass, except for heavy offenses and offenses connected with lay people. The Sangha approves and is therefore silent. ",
   "pli-tv-kd14:14.33.42": "I’ll remember it thus.’ ",
   "pli-tv-kd14:14.33.43": "This is called the resolution of a legal issue. ",
-  "pli-tv-kd14:14.33.45": "It has been resolved face-to-face and by covering over as if with grass. ",
+  "pli-tv-kd14:14.33.45": "It’s been resolved face-to-face and by covering over as if with grass. ",
   "pli-tv-kd14:14.33.46": "Face-to-face with what? ",
-  "pli-tv-kd14:14.33.47": "Face-to-face with the Sangha, face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. ",
+  "pli-tv-kd14:14.33.47": "Face-to-face with the Sangha, the Teaching, the Monastic Law, and the persons concerned. ",
   "pli-tv-kd14:14.33.48": "This is the meaning of face-to-face with the Sangha: ",
   "pli-tv-kd14:14.33.49": "the monks who should be present have arrived, consent has been brought for those who are eligible to give their consent, and no one present objects to the decision. ",
-  "pli-tv-kd14:14.33.51": "This is the meaning of face-to-face with the Teaching, face-to-face with the Monastic Law: ",
+  "pli-tv-kd14:14.33.51": "This is the meaning of face-to-face with the Teaching and the Monastic Law: ",
   "pli-tv-kd14:14.33.52": "the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
   "pli-tv-kd14:14.33.54": "This is the meaning of face-to-face with the persons concerned: ",
   "pli-tv-kd14:14.33.55": "both the one who confesses and the one he confesses to are present. ",
