Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -884,7 +884,7 @@
   "pli-tv-kd14:14.16.7": "It may be, monks, that monks are disputing, saying, ",
   "pli-tv-kd14:14.16.8": "‘This is the Teaching’, ‘This is contrary to the Teaching’, ‘This is the Monastic Law’, ‘This is contrary to the Monastic Law’, ‘This was spoken by the Buddha’, ‘This wasn’t spoken by the Buddha’, ‘This was practiced by the Buddha’, ‘This wasn’t practiced by the Buddha’, ‘This was laid down by the Buddha’, ‘This wasn’t laid down by the Buddha’, ‘This is an offense’, ‘This isn’t an offense’, ‘This is a light offense’, ‘This is a heavy offense’, ‘This is a curable offense’, ‘This is an incurable offense’, ‘This is a grave offense’, or ‘This is a minor offense.’ ",
   "pli-tv-kd14:14.16.9": "If those monks are able to resolve that legal issue, this is called the resolution of a legal issue. ",
-  "pli-tv-kd14:14.16.11": "It has been resolved face-to-face. ",
+  "pli-tv-kd14:14.16.11": "It’s been resolved face-to-face. ",
   "pli-tv-kd14:14.16.12": "Face-to-face with what? ",
   "pli-tv-kd14:14.16.13": "Face-to-face with the Sangha, face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. ",
   "pli-tv-kd14:14.16.14": "This is the meaning of face-to-face with the Sangha: ",
