Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -886,7 +886,7 @@
   "pli-tv-kd14:14.16.9": "If those monks are able to resolve that legal issue, this is called the resolution of a legal issue. ",
   "pli-tv-kd14:14.16.11": "It’s been resolved face-to-face. ",
   "pli-tv-kd14:14.16.12": "Face-to-face with what? ",
-  "pli-tv-kd14:14.16.13": "Face-to-face with the Sangha, face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. ",
+  "pli-tv-kd14:14.16.13": "Face-to-face with the Sangha, the Teaching, the Monastic Law, and the persons concerned. ",
   "pli-tv-kd14:14.16.14": "This is the meaning of face-to-face with the Sangha: ",
   "pli-tv-kd14:14.16.15": "the monks who should be present have arrived, consent has been brought for those who are eligible to give their consent, and no one present objects to the decision. ",
   "pli-tv-kd14:14.16.17": "This is the meaning of face-to-face with the Teaching, face-to-face with the Monastic Law: ",
