--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -889,7 +889,7 @@
   "pli-tv-kd14:14.16.13": "Face-to-face with the Sangha, the Teaching, the Monastic Law, and the persons concerned. ",
   "pli-tv-kd14:14.16.14": "This is the meaning of face-to-face with the Sangha: ",
   "pli-tv-kd14:14.16.15": "the monks who should be present have arrived, consent has been brought for those who are eligible to give their consent, and no one present objects to the decision. ",
-  "pli-tv-kd14:14.16.17": "This is the meaning of face-to-face with the Teaching, face-to-face with the Monastic Law: ",
+  "pli-tv-kd14:14.16.17": "This is the meaning of face-to-face with the Teaching and the Monastic Law: ",
   "pli-tv-kd14:14.16.18": "the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
   "pli-tv-kd14:14.16.20": "This is the meaning of face-to-face with the persons concerned: ",
   "pli-tv-kd14:14.16.21": "both sides—those who are disputing and those they’re disputing with—are present. ",
