Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -818,7 +818,7 @@
   "pli-tv-kd17:5.1.15": "If there are three monks on one side and three on the other, and a seventh makes the proclamation and distributes voting tickets, saying, ",
   "pli-tv-kd17:5.1.16": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; take this, approve of this,’ ",
   "pli-tv-kd17:5.1.17": "then this is a fracture in the Sangha, but not schism in the Sangha. ",
-  "pli-tv-kd17:5.1.18": "If there are three monks on one side and four on the other, and an eighth makes the proclamation and distributes voting tickets, saying, ",
+  "pli-tv-kd17:5.1.18": "If there are three monks on one side and four on the other, and an eighth makes the proclamation and distributes ballots, saying, ",
   "pli-tv-kd17:5.1.19": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; take this, approve of this,’ ",
   "pli-tv-kd17:5.1.20": "then this is a fracture in the Sangha, but not schism in the Sangha. ",
   "pli-tv-kd17:5.1.21": "But if there are four monks on one side and four on the other, and a ninth makes the proclamation and distributes voting tickets, saying, ",
