Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -821,7 +821,7 @@
   "pli-tv-kd17:5.1.18": "If there are three monks on one side and four on the other, and an eighth makes the proclamation and distributes ballots, saying, ",
   "pli-tv-kd17:5.1.19": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; take this, approve of this,’ ",
   "pli-tv-kd17:5.1.20": "then this is a fracture in the Sangha, but not schism in the Sangha. ",
-  "pli-tv-kd17:5.1.21": "But if there are four monks on one side and four on the other, and a ninth makes the proclamation and distributes voting tickets, saying, ",
+  "pli-tv-kd17:5.1.21": "But if there are four monks on one side and four on the other, and a ninth makes the proclamation and distributes ballots, saying, ",
   "pli-tv-kd17:5.1.22": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; take this, approve of this,’ ",
   "pli-tv-kd17:5.1.23": "then this is both a fracture in the Sangha and also a schism in the Sangha. ",
   "pli-tv-kd17:5.1.24": "And if there are nine or more monks, then this is both a fracture in the Sangha and also a schism in the Sangha. ",
