--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -812,7 +812,7 @@
   "pli-tv-kd17:5.1.9": "If there are two monks on one side and two on the other, and a fifth makes the proclamation and distributes voting tickets, saying, ",
   "pli-tv-kd17:5.1.10": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; take this, approve of this,’ ",
   "pli-tv-kd17:5.1.11": "then this is a fracture in the Sangha, but not schism in the Sangha. ",
-  "pli-tv-kd17:5.1.12": "If there are two monks on one side and three on the other, and a sixth makes the proclamation and distributes voting tickets, saying, ",
+  "pli-tv-kd17:5.1.12": "If there are two monks on one side and three on the other, and a sixth makes the proclamation and distributes ballots, saying, ",
   "pli-tv-kd17:5.1.13": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; take this, approve of this,’ ",
   "pli-tv-kd17:5.1.14": "then this is a fracture in the Sangha, but not schism in the Sangha. ",
   "pli-tv-kd17:5.1.15": "If there are three monks on one side and three on the other, and a seventh makes the proclamation and distributes voting tickets, saying, ",
