Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -809,7 +809,7 @@
   "pli-tv-kd17:5.1.6": "“If, Upāli, there is one monk on one side and two on the other, and a fourth makes the proclamation and distributes ballots, saying, ",
   "pli-tv-kd17:5.1.7": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; take this, approve of this,’ ",
   "pli-tv-kd17:5.1.8": "then this is a fracture in the Sangha, but not schism in the Sangha. ",
-  "pli-tv-kd17:5.1.9": "If there are two monks on one side and two on the other, and a fifth makes the proclamation and distributes voting tickets, saying, ",
+  "pli-tv-kd17:5.1.9": "If there are two monks on one side and two on the other, and a fifth makes the proclamation and distributes ballots, saying, ",
   "pli-tv-kd17:5.1.10": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; take this, approve of this,’ ",
   "pli-tv-kd17:5.1.11": "then this is a fracture in the Sangha, but not schism in the Sangha. ",
   "pli-tv-kd17:5.1.12": "If there are two monks on one side and three on the other, and a sixth makes the proclamation and distributes ballots, saying, ",
