--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -815,7 +815,7 @@
   "pli-tv-kd17:5.1.12": "If there are two monks on one side and three on the other, and a sixth makes the proclamation and distributes ballots, saying, ",
   "pli-tv-kd17:5.1.13": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; take this, approve of this,’ ",
   "pli-tv-kd17:5.1.14": "then this is a fracture in the Sangha, but not schism in the Sangha. ",
-  "pli-tv-kd17:5.1.15": "If there are three monks on one side and three on the other, and a seventh makes the proclamation and distributes voting tickets, saying, ",
+  "pli-tv-kd17:5.1.15": "If there are three monks on one side and three on the other, and a seventh makes the proclamation and distributes ballots, saying, ",
   "pli-tv-kd17:5.1.16": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; take this, approve of this,’ ",
   "pli-tv-kd17:5.1.17": "then this is a fracture in the Sangha, but not schism in the Sangha. ",
   "pli-tv-kd17:5.1.18": "If there are three monks on one side and four on the other, and an eighth makes the proclamation and distributes ballots, saying, ",
