--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -909,7 +909,7 @@
   "pli-tv-kd17:5.5.21": "He has the view that what he says is legitimate, but is unsure about the schism … ",
   "pli-tv-kd17:5.5.22": "He is unsure about what he says, but has the view that the schism is illegitimate … ",
   "pli-tv-kd17:5.5.23": "He is unsure about what he says, but has the view that the schism is legitimate … ",
-  "pli-tv-kd17:5.5.24": "He is unsure about what he says and is unsure about the schism. He misrepresents his view of what is true, his belief of what is true, his acceptance of what is true, and his sentiment of what is true. He makes a proclamation and distributes voting tickets, saying, ",
+  "pli-tv-kd17:5.5.24": "He is unsure about what he says and is unsure about the schism. He misrepresents his view of what is true, his belief of what is true, his acceptance of what is true, and his sentiment of what is true. He makes a proclamation and distributes ballots, saying, ",
   "pli-tv-kd17:5.5.25": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; take this, approve of this.’ ",
   "pli-tv-kd17:5.5.26": "This person, too, who causes a schism in the Sangha is irredeemably destined to an eon in hell. ",
   "pli-tv-kd17:5.5.27": "Again, a monk proclaims what’s in accordance with the Teaching as contrary to it, ",
