Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -639,7 +639,7 @@
   "pli-tv-kd17:3.17.16": "For the noble ones doing evil is hard.” ",
   "pli-tv-kd17:3.17.17": "The second section for recitation is finished. ",
   "pli-tv-kd17:4.1.0": "3.1 The account of schism in the Sangha ",
-  "pli-tv-kd17:4.1.1": "On the observance day soon afterwards, Devadatta got up from his seat and distributed voting tickets, saying, ",
+  "pli-tv-kd17:4.1.1": "On the observance day soon afterwards, Devadatta got up from his seat and distributed ballots, saying, ",
   "pli-tv-kd17:4.1.2": "“We have gone to the ascetic Gotama and asked for five things: ",
   "pli-tv-kd17:4.1.3": "‘In many ways, Sir, you praise fewness of wishes, contentment, the erasing of defilements, ascetic practices, being inspiring, the reduction in things, ",
   "pli-tv-kd17:4.1.4": "and being energetic. ",
