Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -653,7 +653,7 @@
   "pli-tv-kd17:4.1.10": "but we practice in accordance with them. ",
   "pli-tv-kd17:4.1.11": "Any monk who approves of these five things should take a voting ticket.” ",
   "pli-tv-kd17:4.1.12": "On that occasion five hundred Vajjian monks from Vesālī, newly ordained and ignorant, were present. ",
-  "pli-tv-kd17:4.1.13": "Thinking, “This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction,” they took voting tickets. ",
+  "pli-tv-kd17:4.1.13": "Thinking, “This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction,” they voted. ",
   "pli-tv-kd17:4.1.14": "Then, after causing a schism in the Sangha, Devadatta left for Gayāsīsa together with five hundred monks. ",
   "pli-tv-kd17:4.1.15": "Soon afterwards Sāriputta and Moggallāna went to the Buddha, bowed, sat down, ",
   "pli-tv-kd17:4.1.16": "and said, ",
