Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -651,7 +651,7 @@
   "pli-tv-kd17:4.1.8": "if they didn’t eat fish or meat for life, and whoever does would commit an offense.’ ",
   "pli-tv-kd17:4.1.9": "The ascetic Gotama doesn’t agree to them, ",
   "pli-tv-kd17:4.1.10": "but we practice in accordance with them. ",
-  "pli-tv-kd17:4.1.11": "Any monk who approves of these five things should vote.” ",
+  "pli-tv-kd17:4.1.11": "Any monk who approves of these five things should vote in favor.” ",
   "pli-tv-kd17:4.1.12": "On that occasion five hundred Vajjian monks from Vesālī, newly ordained and ignorant, were present. ",
   "pli-tv-kd17:4.1.13": "Thinking, “This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction,” they voted. ",
   "pli-tv-kd17:4.1.14": "Then, after causing a schism in the Sangha, Devadatta left for Gayāsīsa together with five hundred monks. ",
