--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -877,7 +877,7 @@
   "pli-tv-kd14:14.15.14.0.2": "9.1 Resolution face-to-face ",
   "pli-tv-kd14:14.16.1": "“There are two principles for settling a legal issue arising from a dispute: ",
   "pli-tv-kd14:14.16.2": "resolution face-to-face and majority decision. ",
-  "pli-tv-kd14:14.16.3": "Can it be that a legal issue arising from a dispute should be settled not by majority decision, ",
+  "pli-tv-kd14:14.16.3": "Is it possible that a legal issue arising from a dispute should be settled not by majority decision, ",
   "pli-tv-kd14:14.16.4": "but by resolution face-to-face? ",
   "pli-tv-kd14:14.16.5": "It can. ",
   "pli-tv-kd14:14.16.6": "How’s that? ",
