--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -879,8 +879,8 @@
   "pli-tv-kd14:14.16.2": "resolution face-to-face and majority decision. ",
   "pli-tv-kd14:14.16.3": "Is it possible that a legal issue arising from a dispute should be settled not by majority decision, ",
   "pli-tv-kd14:14.16.4": "but by resolution face-to-face? ",
-  "pli-tv-kd14:14.16.5": "It can. ",
-  "pli-tv-kd14:14.16.6": "How’s that? ",
+  "pli-tv-kd14:14.16.5": "It is. ",
+  "pli-tv-kd14:14.16.6": "How? ",
   "pli-tv-kd14:14.16.7": "It may be, monks, that monks are disputing, saying, ",
   "pli-tv-kd14:14.16.8": "‘This is the Teaching’, ‘This is contrary to the Teaching’, ‘This is the Monastic Law’, ‘This is contrary to the Monastic Law’, ‘This was spoken by the Buddha’, ‘This wasn’t spoken by the Buddha’, ‘This was practiced by the Buddha’, ‘This wasn’t practiced by the Buddha’, ‘This was laid down by the Buddha’, ‘This wasn’t laid down by the Buddha’, ‘This is an offense’, ‘This isn’t an offense’, ‘This is a light offense’, ‘This is a heavy offense’, ‘This is a curable offense’, ‘This is an incurable offense’, ‘This is a grave offense’, or ‘This is a minor offense.’ ",
   "pli-tv-kd14:14.16.9": "If those monks are able to resolve that legal issue, this is called the resolution of a legal issue. ",
