Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1072,7 +1072,7 @@
   "pli-tv-kd14:14.27.0": "9.5 Resolution through recollection ",
   "pli-tv-kd14:14.27.2": "“There are four principles for settling a legal issue arising from an accusation: ",
   "pli-tv-kd14:14.27.3": "resolution face-to-face, resolution through recollection, resolution because of past insanity, and by further penalty. ",
-  "pli-tv-kd14:14.27.4": "Can it be that a legal issue arising from an accusation should be settled ",
+  "pli-tv-kd14:14.27.4": "Is it possible that a legal issue arising from an accusation should be settled ",
   "pli-tv-kd14:14.27.5": "not by resolution because of past insanity or by further penalty, ",
   "pli-tv-kd14:14.27.6": "but ",
   "pli-tv-kd14:14.27.7": "by resolution face-to-face and by resolution through recollection? ",
