--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1076,8 +1076,8 @@
   "pli-tv-kd14:14.27.5": "not by resolution because of past insanity or by further penalty, ",
   "pli-tv-kd14:14.27.6": "but ",
   "pli-tv-kd14:14.27.7": "by resolution face-to-face and by resolution through recollection? ",
-  "pli-tv-kd14:14.27.8": "It can. ",
-  "pli-tv-kd14:14.27.9": "How’s that? ",
+  "pli-tv-kd14:14.27.8": "It is. ",
+  "pli-tv-kd14:14.27.9": "How? ",
   "pli-tv-kd14:14.27.10": "It may be that monks are groundlessly charging a monk with failure in morality. ",
   "pli-tv-kd14:14.27.11": "If that monk has great clarity of memory, he’s to be granted resolution through recollection. ",
   "pli-tv-kd14:14.27.12": "And it should be granted like this. ",
