--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1091,7 +1091,7 @@
   "pli-tv-kd14:14.27.20": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:14.27.21": "Monks are groundlessly charging monk so-and-so with failure in morality. ",
   "pli-tv-kd14:14.27.22": "Because of his great clarity of memory, he’s asking the Sangha for resolution through recollection. ",
-  "pli-tv-kd14:14.27.23": "If it seems appropriate to the Sangha, then, because of his great clarity of memory, the Sangha should grant him resolution through recollection. ",
+  "pli-tv-kd14:14.27.23": "If it seems appropriate to the Sangha, the Sangha should grant him resolution through recollection. ",
   "pli-tv-kd14:14.27.24": "This is the motion. ",
   "pli-tv-kd14:14.27.25": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:14.27.26": "Monks are groundlessly charging monk so-and-so with failure in morality. ",
