Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1112,7 +1112,7 @@
   "pli-tv-kd14:14.27.43": "This is the meaning of resolution through recollection: ",
   "pli-tv-kd14:14.27.44": "the doing of, the performing of, the participation in, the consent to, the agreement to, the non-objection to that legal procedure of resolution through recollection. ",
   "pli-tv-kd14:14.27.46": "When a legal issue has been resolved like this, if any of the participants reopen it, they incur an offense entailing confession for the reopening. ",
-  "pli-tv-kd14:14.27.47": "If anyone who gave their consent criticizes the resolution, they incur an offense entailing confession. ",
+  "pli-tv-kd14:14.27.47": "If anyone who gave their consent criticizes the resolution, they incur an offense entailing confession.” ",
   "pli-tv-kd14:14.28.0": "9.6 Resolution because of past insanity ",
   "pli-tv-kd14:14.28.1": "“Can it be that a legal issue arising from an accusation should be settled ",
   "pli-tv-kd14:14.28.2": "not by resolution through recollection or by further penalty, ",
