Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1114,7 +1114,7 @@
   "pli-tv-kd14:14.27.46": "When a legal issue has been resolved like this, if any of the participants reopen it, they incur an offense entailing confession for the reopening. ",
   "pli-tv-kd14:14.27.47": "If anyone who gave their consent criticizes the resolution, they incur an offense entailing confession.” ",
   "pli-tv-kd14:14.28.0": "9.6 Resolution because of past insanity ",
-  "pli-tv-kd14:14.28.1": "“Can it be that a legal issue arising from an accusation should be settled ",
+  "pli-tv-kd14:14.28.1": "“Is it possible that a legal issue arising from an accusation should be settled ",
   "pli-tv-kd14:14.28.2": "not by resolution through recollection or by further penalty, ",
   "pli-tv-kd14:14.28.3": "but ",
   "pli-tv-kd14:14.28.4": "by resolution face-to-face and by resolution because of past insanity? ",
