Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1118,8 +1118,8 @@
   "pli-tv-kd14:14.28.2": "not by resolution through recollection or by further penalty, ",
   "pli-tv-kd14:14.28.3": "but ",
   "pli-tv-kd14:14.28.4": "by resolution face-to-face and by resolution because of past insanity? ",
-  "pli-tv-kd14:14.28.5": "It can. ",
-  "pli-tv-kd14:14.28.6": "How’s that? ",
+  "pli-tv-kd14:14.28.5": "It is. ",
+  "pli-tv-kd14:14.28.6": "How? ",
   "pli-tv-kd14:14.28.7": "It may be that a monk is insane and suffering from psychosis. ",
   "pli-tv-kd14:14.28.8": "Because of that, he does and says many things unworthy of a monastic. ",
   "pli-tv-kd14:14.28.9": "Monks accuse him of an offense, saying, ",
