--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1127,7 +1127,7 @@
   "pli-tv-kd14:14.28.11": "He replies, ",
   "pli-tv-kd14:14.28.12": "‘I was insane and suffering from psychosis. ",
   "pli-tv-kd14:14.28.13": "Because of that, I did and said many things unworthy of a monastic. ",
-  "pli-tv-kd14:14.28.14": "I don’t remember it; ",
+  "pli-tv-kd14:14.28.14": "I don’t remember it. ",
   "pli-tv-kd14:14.28.15": "I did it because I was insane.’ ",
   "pli-tv-kd14:14.28.16": "But they still accused him ",
   "pli-tv-kd14:14.28.17": "in the same way. ",
