Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1163,7 +1163,7 @@
   "pli-tv-kd14:14.28.47": "But they still accused him ",
   "pli-tv-kd14:14.28.48": "in the same way. ",
   "pli-tv-kd14:14.28.49": "Because he’s no longer insane, he’s asking the Sangha for resolution because of past insanity. ",
-  "pli-tv-kd14:14.28.50": "If it seems appropriate to the Sangha, then, because he’s no longer insane, the Sangha should grant monk so-and-so resolution because of past insanity. ",
+  "pli-tv-kd14:14.28.50": "If it seems appropriate to the Sangha, the Sangha should grant monk so-and-so resolution because of past insanity. ",
   "pli-tv-kd14:14.28.51": "This is the motion. ",
   "pli-tv-kd14:14.28.52": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:14.28.53": "The monk so-and-so has been insane and suffering from psychosis. ",
