--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1173,7 +1173,7 @@
   "pli-tv-kd14:14.28.57": "He replied, ",
   "pli-tv-kd14:14.28.58": "“I was insane and suffering from psychosis. ",
   "pli-tv-kd14:14.28.59": "Because of that, I did and said many things unworthy of a monastic. ",
-  "pli-tv-kd14:14.28.60": "I don’t remember it; ",
+  "pli-tv-kd14:14.28.60": "I don’t remember it. ",
   "pli-tv-kd14:14.28.61": "I did it because I was insane.” ",
   "pli-tv-kd14:14.28.62": "But they still accused him ",
   "pli-tv-kd14:14.28.63": "in the same way. ",
