--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1178,7 +1178,7 @@
   "pli-tv-kd14:14.28.62": "But they still accused him ",
   "pli-tv-kd14:14.28.63": "in the same way. ",
   "pli-tv-kd14:14.28.64": "Because he’s no longer insane, he’s asking the Sangha for resolution because of past insanity. ",
-  "pli-tv-kd14:14.28.65": "Because he’s no longer insane, the Sangha grants monk so-and-so resolution because of past insanity. ",
+  "pli-tv-kd14:14.28.65": "The Sangha grants monk so-and-so resolution because of past insanity. ",
   "pli-tv-kd14:14.28.66": "Any monk who approves of granting monk so-and-so resolution because of past insanity should remain silent. ",
   "pli-tv-kd14:14.28.67": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:14.28.68": "For the second time I speak on this matter. … ",
