--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1205,7 +1205,7 @@
   "pli-tv-kd14:14.29.9": "He replies, ",
   "pli-tv-kd14:14.29.10": "‘I don’t.’ ",
   "pli-tv-kd14:14.29.11": "As he tries to free himself, the accusing monk presses him further: ",
-  "pli-tv-kd14:14.29.12": "‘Come on, Venerable, think properly whether you remember committing such-and-such a heavy offense.’ ",
+  "pli-tv-kd14:14.29.12": "‘Come on, Venerable, try harder to  remember whether you committed such-and-such a heavy offense.’ ",
   "pli-tv-kd14:14.29.13": "He replies, ",
   "pli-tv-kd14:14.29.14": "‘I don’t remember committing a heavy offense. ",
   "pli-tv-kd14:14.29.15": "But I do remember committing such-and-such a minor offense.’ ",
