Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an2/an2.151-162_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an2/an2.151-162_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.151-162_translation-de-sabbamitta.json
@@ -23,7 +23,7 @@
   "an2.154:1.0": "154 ",
   "an2.154:1.1": "„Es gibt zwei Arten des Fahndens. ",
   "an2.154:1.2": "Welche zwei? ",
-  "an2.154:1.3": "Die Suche nach materiellen Dingen und die Suche nach der Lehre. ",
+  "an2.154:1.3": "Das Fahnden nach materiellen Dingen und das Fahnden nach der Lehre. ",
   "an2.154:1.4": "Das sind die beiden Arten der Suche. ",
   "an2.154:1.5": "Die bessere der beiden ist die Suche nach der Lehre.“ ",
   "an2.155:1.0": "155 ",
