Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -116,5 +116,5 @@
   "mn4:20.9": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:20.10": "‘નક્કી આ એ જ ડર અને બીક આવી લાગે છે’.",
   "mn4:20.11": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
-  "mn4:20.12": "‘હું શેના માટે હંમેશા ભયની અપેક્ષા રાખીને રહું છું?"
+  "mn4:20.12": "‘હું શેના માટે હંમેશા ડરની અપેક્ષા રાખીને રહું છું?"
 }
