--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -1166,7 +1166,7 @@
   "sn-name:2043.sn56.40": "Auf ein Streitgespräch aus ",
   "sn-name:2044.sn56-papatavagga": "Das Kapitel über eine Klippe ",
   "sn-name:2045.sn56.41": "Spekulationen über die Welt ",
-  "sn-name:2046.sn56.42": "Eine Klippe ",
+  "sn-name:2046.sn56.42": "Ein Abgrund ",
   "sn-name:2047.sn56.43": "Das große Fieber ",
   "sn-name:2048.sn56.44": "Ein Giebelhaus ",
   "sn-name:2049.sn56.45": "Haare spalten ",
