--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "sn56.42:1.3": "„Kommt, Mönche und Nonnen, wir wollen zum Erkenntnisgrat gehen, um den Tag über dort zu meditieren. ",
   "sn56.42:1.4": "„Ja, Herr“, antworteten sie. ",
   "sn56.42:1.5": "Da ging der Buddha zusammen mit mehreren Mönchen zum Erkenntnisgrat. ",
-  "sn56.42:1.6": "Ein Mönch sah dort eine große Klippe ",
+  "sn56.42:1.6": "Ein Mönch sah dort einen tiefen Abgrund ",
   "sn56.42:1.7": "und sagte zum Buddha: ",
   "sn56.42:1.8": "„Herr, diese große Klippe ist wirklich gewaltig und wahrhaft schrecklich. ",
   "sn56.42:1.9": "Gibt es eine andere Klippe, die noch gewaltiger und schrecklicher ist als diese?“ ",
