--- a/translation/de/sabbamitta/sutta/an/an6/an6.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.20_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "an6.20:2.2": "‚Ich könnte aus vielen Anlässen sterben. ",
   "an6.20:2.3": "Ich könnte von einer Schlange gebissen oder von einem Skorpion oder Tausendfüßler gestochen werden. ",
   "an6.20:2.4": "Und wenn ich daran sterben würde, wäre meine Übung unterbrochen. ",
-  "an6.20:2.5": "Oder ich könnte stolpern und eine Klippe hinunterfallen, eine Lebensmittelvergiftung bekommen, oder Galle, Schleim oder stechende Winde könnten in mir in Aufruhr geraten. ",
+  "an6.20:2.5": "Oder ich könnte stolpern und einen Abgrund hinunterstürzen, eine Lebensmittelvergiftung bekommen, oder Galle, Schleim oder stechende Winde könnten in mir in Aufruhr geraten. ",
   "an6.20:2.6": "Und wenn ich daran sterben würde, wäre meine Übung unterbrochen.‘ ",
   "an6.20:2.7": "Dieser Mönch sollte überlegen: ",
   "an6.20:2.8": "‚Gibt es schlechte, untaugliche Eigenschaften, die ich nicht aufgegeben habe und die ein Hindernis für mich wären, wenn ich heute Nacht sterben würde?‘ ",
