--- a/translation/de/sabbamitta/sutta/an/an6/an6.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.20_translation-de-sabbamitta.json
@@ -24,7 +24,7 @@
   "an6.20:5.2": "‚Ich könnte aus vielen Anlässen sterben. ",
   "an6.20:5.3": "Ich könnte von einer Schlange gebissen oder von einem Skorpion oder Tausendfüßler gestochen werden. ",
   "an6.20:5.4": "Und wenn ich daran sterben würde, wäre meine Übung unterbrochen. ",
-  "an6.20:5.5": "Oder ich könnte stolpern und eine Klippe hinunterfallen, eine Lebensmittelvergiftung bekommen, oder Galle, Schleim oder stechende Winde könnten in mir in Aufruhr geraten. ",
+  "an6.20:5.5": "Oder ich könnte stolpern und einen Abgrund hinunterstürzen, eine Lebensmittelvergiftung bekommen, oder Galle, Schleim oder stechende Winde könnten in mir in Aufruhr geraten. ",
   "an6.20:5.6": "Und wenn ich daran sterben würde, wäre meine Übung unterbrochen.‘ ",
   "an6.20:5.7": "Diese Nonne sollte überlegen: ",
   "an6.20:5.8": "‚Gibt es schlechte, untaugliche Eigenschaften, die ich nicht aufgegeben habe und die ein Hindernis für mich wären, wenn ich heute sterben würde?‘ ",
