--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.87:0.1": "Verbundene Lehrreden 22.87 ",
   "sn22.87:0.2": "9. Das Kapitel mit Ordensältesten ",
-  "sn22.87:0.3": "Mit Vakkali "
+  "sn22.87:0.3": "Mit Vakkali ",
+  "sn22.87:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. "
 }
