--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn22.87:0.3": "Mit Vakkali ",
   "sn22.87:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
   "sn22.87:1.2": "Zu dieser Zeit nun hielt sich der Ehrwürdige Vakkali im Schuppen eines Töpfers auf, und er war mitgenommen, leidend, schwer krank. ",
-  "sn22.87:1.3": "Da wandte er sich an seine Pfleger: "
+  "sn22.87:1.3": "Da wandte er sich an seine Pfleger: ",
+  "sn22.87:1.4": "„Bitte, werte Freunde, geht zum Buddha und beugt in meinem Namen euren Kopf zu seinen Füßen. Sagt zu ihm: "
 }
