--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn22.87:1.2": "Zu dieser Zeit nun hielt sich der Ehrwürdige Vakkali im Schuppen eines Töpfers auf, und er war mitgenommen, leidend, schwer krank. ",
   "sn22.87:1.3": "Da wandte er sich an seine Pfleger: ",
   "sn22.87:1.4": "„Bitte, werte Freunde, geht zum Buddha und beugt in meinem Namen euren Kopf zu seinen Füßen. Sagt zu ihm: ",
-  "sn22.87:1.5": "‚Herr, der Mönch Vakkali ist mitgenommen, leidend, schwer krank. Er beugt seinen Kopf zu deinen Füßen.‘ "
+  "sn22.87:1.5": "‚Herr, der Mönch Vakkali ist mitgenommen, leidend, schwer krank. Er beugt seinen Kopf zu deinen Füßen.‘ ",
+  "sn22.87:1.6": "Und dann sagt: "
 }
