Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.87:1.5": "‚Herr, der Mönch Vakkali ist mitgenommen, leidend, schwer krank. Er beugt seinen Kopf zu deinen Füßen.‘ ",
   "sn22.87:1.6": "Und dann sagt: ",
   "sn22.87:1.7": "‚Herr, bitte gehe aus Anteilnahme zu dem Mönch Vakkali.‘“ ",
-  "sn22.87:1.8": "„Ja, werter Freund“, antworteten diese Mönche und taten so. "
+  "sn22.87:1.8": "„Ja, werter Freund“, antworteten diese Mönche und taten so. ",
+  "sn22.87:1.12": "Der Buddha schwieg zum Zeichen der Zustimmung. "
 }
