Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn22.87:1.6": "Und dann sagt: ",
   "sn22.87:1.7": "‚Herr, bitte geh aus Anteilnahme zu dem Mönch Vakkali.‘“ ",
   "sn22.87:1.8": "„Ja, werter Freund“, antworteten diese Mönche. Sie erhoben sich von ihren Sitzen, gingen zum Buddha und überbrachten ihm die Botschaft. ",
-  "sn22.87:1.12": "Der Buddha schwieg zum Zeichen der Zustimmung. "
+  "sn22.87:1.12": "Der Buddha schwieg zum Zeichen der Zustimmung. ",
+  "sn22.87:2.1": "Da kleidete der Buddha sich am Morgen an, nahm Schale und Robe und ging zum Ehrwürdigen Vakkali. "
 }
