Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.87:1.12": "Der Buddha schwieg zum Zeichen der Zustimmung. ",
   "sn22.87:2.1": "Da kleidete der Buddha sich am Morgen an, nahm Schale und Robe und ging zum Ehrwürdigen Vakkali. ",
   "sn22.87:2.2": "Der Ehrwürdige Vakkali sah den Buddha von Weitem kommen und versuchte, sich auf seiner Liege aufzurichten. ",
-  "sn22.87:2.3": "Aber der Buddha sagte zu ihm: "
+  "sn22.87:2.3": "Aber der Buddha sagte zu ihm: ",
+  "sn22.87:2.4": "„Es ist gut, Vakkali, du brauchst nicht aufzustehen. "
 }
