--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn22.87:2.2": "Der Ehrwürdige Vakkali sah den Buddha von Weitem kommen und versuchte, sich auf seiner Liege aufzurichten. ",
   "sn22.87:2.3": "Aber der Buddha sagte zu ihm: ",
   "sn22.87:2.4": "„Es ist gut, Vakkali, du brauchst nicht aufzustehen. ",
-  "sn22.87:2.5": "Hier sind Sitze ausgelegt, da werde ich mich hinsetzen.“ "
+  "sn22.87:2.5": "Hier sind Sitze ausgelegt, da werde ich mich hinsetzen.“ ",
+  "sn22.87:2.6": "Er setzte sich auf einen ausgebreiteten Sitz und sagte zu Vakkali: "
 }
