--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn22.87:2.4": "„Es ist gut, Vakkali, du brauchst nicht aufzustehen. ",
   "sn22.87:2.5": "Hier sind Sitze ausgelegt, da werde ich mich hinsetzen.“ ",
   "sn22.87:2.6": "Er setzte sich auf einen ausgebreiteten Sitz und sagte zu Vakkali: ",
-  "sn22.87:2.7": "„Ich hoffe, es geht dir leidlich, Vakkali, ich hoffe, du kommst zurecht. Und ich hoffe, dass der Schmerz nachlässt und nicht zunimmt, dass ein Nachlassen erkennbar ist, kein Zunehmen.“ "
+  "sn22.87:2.7": "„Ich hoffe, es geht dir leidlich, Vakkali, ich hoffe, du kommst zurecht. Und ich hoffe, dass der Schmerz nachlässt und nicht zunimmt, dass ein Nachlassen erkennbar ist, kein Zunehmen.“ ",
+  "sn22.87:2.8": "„Herr, es geht mir nicht leidlich, ich komme nicht zurecht. Der Schmerz ist schrecklich und nimmt zu, er lässt nicht nach, ein Zunehmen ist erkennbar, kein Nachlassen.“ "
 }
