--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn22.87:2.7": "„Ich hoffe, es geht dir leidlich, Vakkali, ich hoffe, du kommst zurecht. Und ich hoffe, dass der Schmerz nachlässt und nicht zunimmt, dass ein Nachlassen erkennbar ist, kein Zunehmen.“ ",
   "sn22.87:2.8": "„Herr, es geht mir nicht leidlich, ich komme nicht zurecht. Der Schmerz ist schrecklich und nimmt zu, er lässt nicht nach, ein Zunehmen ist erkennbar, kein Nachlassen.“ ",
   "sn22.87:2.9": "„Ich hoffe, es gibt nichts, was du bereust oder bedauerst?“ ",
-  "sn22.87:2.10": "„Tatsächlich, Herr, gibt etwas nicht Geringes, was ich bereue und bedauere.“ "
+  "sn22.87:2.10": "„Tatsächlich, Herr, gibt etwas nicht Geringes, was ich bereue und bedauere.“ ",
+  "sn22.87:2.11": "„Ich hoffe, du hast dir in Bezug auf das sittliche Verhalten nichts vorzuwerfen?“ "
 }
