--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "sn22.87:2.11": "„Ich hoffe, du hast dir wegen deines sittlichen Verhaltens nichts vorzuwerfen?“ ",
   "sn22.87:2.12": "„Nein, Herr, ich habe mir wegen meines sittlichen Verhaltens nichts vorzuwerfen.“ ",
   "sn22.87:2.13": "„Was ist es in diesem Fall, Vakkali, das du bereust oder bedauerst?“ ",
-  "sn22.87:2.14": "„Seit langem schon wollte ich gehen, um den Buddha zu sehen, aber ich war körperlich zu schwach.“ "
+  "sn22.87:2.14": "„Seit langem schon wollte ich gehen, um den Buddha zu sehen, aber ich war körperlich zu schwach.“ ",
+  "sn22.87:3.1": "„Genug, Vakkali! Warum solltest du diesen faulen Körper sehen wollen? "
 }
