--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn22.87:2.13": "„Was ist es in diesem Fall, Vakkali, das du bereust oder bedauerst?“ ",
   "sn22.87:2.14": "„Seit langem schon wollte ich gehen, um den Buddha zu sehen, aber ich war körperlich zu schwach.“ ",
   "sn22.87:3.1": "„Genug, Vakkali! Warum solltest du diesen faulen Körper sehen wollen? ",
-  "sn22.87:3.2": "Jemand, der die Lehre sieht, sieht mich. "
+  "sn22.87:3.2": "Jemand, der die Lehre sieht, sieht mich. ",
+  "sn22.87:3.3": "Jemand, der mich sieht, sieht die Lehre. "
 }
