Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn22.87:2.14": "„Seit langem schon wollte ich gehen, um den Buddha zu sehen, aber ich war körperlich zu schwach.“ ",
   "sn22.87:3.1": "„Genug, Vakkali! Warum solltest du diesen faulen Körper sehen wollen? ",
   "sn22.87:3.2": "Jemand, der die Lehre sieht, sieht mich. ",
-  "sn22.87:3.3": "Jemand, der mich sieht, sieht die Lehre. "
+  "sn22.87:3.3": "Jemand, der mich sieht, sieht die Lehre. ",
+  "sn22.87:3.4": "Wenn du die Lehre siehst, siehst du mich. "
 }
