--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "sn22.87:3.3": "Jemand, der mich sieht, sieht die Lehre. ",
   "sn22.87:3.4": "Wenn du die Lehre siehst, siehst du mich. ",
   "sn22.87:3.5": "Wenn du mich siehst, siehst du die Lehre. ",
-  "sn22.87:4.1": "Was denkst du, Vakkali? "
+  "sn22.87:4.1": "Was denkst du, Vakkali? ",
+  "sn22.87:4.2": "Ist Form beständig oder unbeständig?“ "
 }
