Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "sn22.87:4.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: ",
   "sn22.87:4.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn22.87:4.8": "„Nein, Herr.“ ",
-  "sn22.87:4.9": "„Ist Gefühl … "
+  "sn22.87:4.9": "„Ist Gefühl … ",
+  "sn22.87:4.10": "Wahrnehmung … "
 }
