Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -41,5 +41,6 @@
   "sn22.87:4.9": "„Ist Gefühl … ",
   "sn22.87:4.10": "Ist Wahrnehmung … ",
   "sn22.87:4.11": "Sind Entscheidungen … ",
-  "sn22.87:4.12": "Ist Bewusstsein beständig oder unbeständig?“ "
+  "sn22.87:4.12": "Ist Bewusstsein beständig oder unbeständig?“ ",
+  "sn22.87:4.13": "„Unbeständig, Herr.“ … "
 }
