Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -57,5 +57,6 @@
   "sn22.87:5.9": "„Herr, der Mönch Vakkali ist zur Befreiung entschlossen!“ ",
   "sn22.87:5.10": "Die andere Gottheit sagte zum Buddha: ",
   "sn22.87:5.11": "„Er wird gewiss gut befreit sein!“ ",
-  "sn22.87:5.12": "Das sagten diese beiden Gottheiten. "
+  "sn22.87:5.12": "Das sagten diese beiden Gottheiten. ",
+  "sn22.87:5.13": "Dann verbeugten sie sich, umrundeten den Buddha respektvoll, die rechte Seite ihm zugewandt, und verschwanden eben dort. "
 }
