Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -59,5 +59,6 @@
   "sn22.87:5.11": "„Er wird gewiss gut befreit sein!“ ",
   "sn22.87:5.12": "Das sagten diese beiden Gottheiten. ",
   "sn22.87:5.13": "Dann verbeugten sie sich, umrundeten den Buddha respektvoll, die rechte Seite ihm zugewandt, und verschwanden eben dort. ",
-  "sn22.87:6.1": "Als dann die Nacht vorüber war, wandte sich der Buddha an die Mönche und Nonnen: "
+  "sn22.87:6.1": "Als dann die Nacht vorüber war, wandte sich der Buddha an die Mönche und Nonnen: ",
+  "sn22.87:6.2": "„Kommt, Mönche und Nonnen, geht zu dem Mönch Vakkali und sagt ihm: "
 }
