Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -65,5 +65,6 @@
   "sn22.87:7.2": "Spät in der letzten Nacht kamen zwei Gottheiten, die mit ihrer wunderbaren Schönheit die Geierkuppe weithin erhellten, zum Buddha, verbeugten sich und stellten sich zur Seite hin. ",
   "sn22.87:7.3": "Eine von ihnen sagte zu ihm: ",
   "sn22.87:7.4": "„Herr, der Mönch Vakkali ist zur Befreiung entschlossen!“ ",
-  "sn22.87:7.5": "Und die andere sagte: "
+  "sn22.87:7.5": "Und die andere sagte: ",
+  "sn22.87:7.6": "„Er wird gewiss gut befreit sein!“ "
 }
