Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -66,5 +66,6 @@
   "sn22.87:7.3": "Eine von ihnen sagte zu ihm: ",
   "sn22.87:7.4": "„Herr, der Mönch Vakkali ist zur Befreiung entschlossen!“ ",
   "sn22.87:7.5": "Und die andere sagte: ",
-  "sn22.87:7.6": "„Er wird gewiss gut befreit sein!“ "
+  "sn22.87:7.6": "„Er wird gewiss gut befreit sein!“ ",
+  "sn22.87:7.7": "Und der Buddha sagt: "
 }
