Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -68,5 +68,6 @@
   "sn22.87:7.5": "Und die andere sagte: ",
   "sn22.87:7.6": "„Er wird gewiss gut befreit sein!“ ",
   "sn22.87:7.7": "Und der Buddha sagt: ",
-  "sn22.87:7.8": "„Fürchte dich nicht, Vakkali, "
+  "sn22.87:7.8": "„Fürchte dich nicht, Vakkali, ",
+  "sn22.87:7.9": "fürchte dich nicht! "
 }
