Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -70,5 +70,6 @@
   "sn22.87:7.7": "Und der Buddha sagt: ",
   "sn22.87:7.8": "„Fürchte dich nicht, Vakkali, ",
   "sn22.87:7.9": "fürchte dich nicht! ",
-  "sn22.87:7.10": "Dein Tod wird kein schlechter sein; dein Verscheiden wird kein schlechtes sein.“‘“ "
+  "sn22.87:7.10": "Dein Tod wird kein schlechter sein; dein Verscheiden wird kein schlechtes sein.“‘“ ",
+  "sn22.87:7.11": "„Ja, Herr“, antworteten diese Mönche und Nonnen. Sie gingen zum Ehrwürdigen Vakkali und sagten zu ihm: "
 }
