Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -84,5 +84,6 @@
   "sn22.87:8.17": "Und dann sagt: ",
   "sn22.87:8.18": "‚Form ist unbeständig. ",
   "sn22.87:8.19": "Daran habe ich keinen Zweifel. ",
-  "sn22.87:8.20": "Ich bin sicher, dass das, was unbeständig ist, Leiden ist. "
+  "sn22.87:8.20": "Ich bin sicher, dass das, was unbeständig ist, Leiden ist. ",
+  "sn22.87:8.26": "Wahrnehmung ist unbeständig … "
 }
